@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2014 the original author or authors.
+ * Copyright 2012-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import java.util.HashSet;
 import java.util.concurrent.ConcurrentNavigableMap;
 
 import org.springframework.boot.actuate.metrics.Metric;
-import org.springframework.boot.actuate.metrics.reader.PrefixMetricReader;
 import org.springframework.boot.actuate.metrics.util.SimpleInMemoryRepository;
 import org.springframework.boot.actuate.metrics.util.SimpleInMemoryRepository.Callback;
 import org.springframework.boot.actuate.metrics.writer.Delta;
@@ -34,8 +33,7 @@ import org.springframework.boot.actuate.metrics.writer.Delta;
  *
  * @author Dave Syer
  */
-public class InMemoryMetricRepository implements MetricRepository, MultiMetricRepository,
-		PrefixMetricReader {
+public class InMemoryMetricRepository implements MetricRepository, MultiMetricRepository {
 
 	private final SimpleInMemoryRepository<Metric<?>> metrics = new SimpleInMemoryRepository<Metric<?>>();
 
@@ -55,11 +53,11 @@ public class InMemoryMetricRepository implements MetricRepository, MultiMetricRe
 			public Metric<?> modify(Metric<?> current) {
 				if (current != null) {
 					Metric<? extends Number> metric = current;
-					return new Metric<Long>(metricName, metric.increment(amount)
-							.getValue(), timestamp);
+					return new Metric<Long>(metricName,
+							metric.increment(amount).getValue(), timestamp);
 				}
 				else {
-					return new Metric<Long>(metricName, new Long(amount), timestamp);
+					return new Metric<Long>(metricName, Long.valueOf(amount), timestamp);
 				}
 			}
 		});
